// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Track Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="undefined root svelte-whrgz7"
    >
      <a
        class="flex-none"
        href="#/album/1"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs actionable svelte-hn7eai rounded-sm"
          loading="lazy"
          src="./cover.jpg#nonce=0.1"
        />
         
        
      </a>
       
      <div
        class="track svelte-whrgz7"
      >
        <span
          class="title svelte-whrgz7"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </div>
       
       
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Track With Details 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="undefined root svelte-whrgz7"
    >
      <a
        class="flex-none"
        href="#/album/1"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs actionable svelte-hn7eai rounded-sm"
          loading="lazy"
          src="./cover.jpg#nonce=0.1"
        />
         
        
      </a>
       
      <div
        class="track svelte-whrgz7"
      >
        <span
          class="title svelte-whrgz7"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </div>
       
      <div
        class="duration svelte-whrgz7"
      >
        2:06
      </div>
       
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Track With Menu 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="undefined root svelte-whrgz7"
    >
      <a
        class="flex-none"
        href="#/album/1"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs actionable svelte-hn7eai rounded-sm"
          loading="lazy"
          src="./cover.jpg#nonce=0.1"
        />
         
        
      </a>
       
      <div
        class="track svelte-whrgz7"
      >
        <span
          class="title svelte-whrgz7"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </div>
       
       
      <span
        class="wrapper svelte-1dsb53o"
      >
        <button
          class="svelte-2vu076 iconOnly noBorder"
        >
          <i
            class="material-icons svelte-2vu076"
          >
            more_vert
          </i>
           
           
          
           
        </button>
      </span>
       
    </div>
  </div>
</section>
`;
